--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <h1>Good Eats</h1>
 <p>Pick a meal</p>
 <p>see where you go.</p>
+ 
 
+
+<p><img src="images/steak.png" alt="STEAK!" width="500"></p>
+
+<img src="images/bsteak.png" alt="Who burnt the steak?" width="500">
+
+<p><a href="page2.html">Click to see who brunt the steak next page.</a></p> 
 </body>
 </html>
