--- a/finalpage.html
+++ b/finalpage.html
@@ -9,9 +9,9 @@
  
 
 
-<p><img src="images/oldman.png" alt="whoops!" width="500"></p>
+<p><img src="oldman.png" alt="whoops!" width="500"></p>
 
-<img src="images/army.png" alt="my bad!" width="500">
+<img src="army.png" alt="my bad!" width="500">
 
 
 
