--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
  
 
 
-<p><img src="images/steak.png" alt="STEAK!" width="500"></p>
+<p><img src="steak.png" alt="STEAK!" width="500"></p>
 
-<img src="images/bsteak.png" alt="Who burnt the steak?" width="500">
+<img src="bsteak.png" alt="Who burnt the steak?" width="500">
 
 <p><a href="page2.html">Click to see who brunt the steak next page.</a></p> 
 </body>
