--- a/page2.html
+++ b/page2.html
@@ -9,9 +9,9 @@
  
 
 
-<p><img src="images/oldman.png" alt="whoops!" width="500"></p>
+<p><img src="oldman.png" alt="whoops!" width="500"></p>
 
-<img src="images/bsteak.png" alt="my bad!" width="500">
+<img src="bsteak.png" alt="my bad!" width="500">
 
 <p><a href="finalpage.html">Click here to see what happened to Ronny" </a></p>
 
