--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 <p>Pick a meal</p>
 <p>see where you go.</p>
  
-
+<body style="background-color:rgb(82, 52, 52);"></body>
 
 <p><img src="steak.png" alt="STEAK!" width="500"></p>
 
+<a href="page2.html">
 <img src="bsteak.png" alt="Who burnt the steak?" width="500">
+</a>
+<p><a>Click the burnt steak see who burnt the steak next page.</a></p> 
 
-<p><a href="page2.html">Click to see who brunt the steak next page.</a></p> 
 </body>
 </html>
