--- a/page2.html
+++ b/page2.html
@@ -6,10 +6,11 @@
 <body>
 <h1>Oh Ronny burnt the steak</h1>
 
- 
+<body style="background-color:rgb(15, 19, 18);">
 
 
 <p><img src="oldman.png" alt="whoops!" width="500"></p>
+
 
 <img src="bsteak.png" alt="my bad!" width="500">
 
