--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
 
 <img src="bsteak.png" alt="my bad!" width="500">
 
-<p><a href="finalpage.html">Click here to see what happened to Ronny" </a></p>
+<p><a href="page3.html">Click here to see what happened to Ronny" </a></p>
 
 <h1>"Don't do it"</h1> 
 
