--- a/page3.html
+++ b/page3.html
@@ -17,9 +17,9 @@
 
 
 
-<h1>"wait a min you're not ronny"</h1> 
+<h1>"wait a second you're not ronny"</h1> 
 
-<p><a href="page4.html">Click here to see Ronny" </a></p>
+<p><a href="page4.html">Click here to see who this is" </a></p>
 
 
 </body>
