--- a/page4.html
+++ b/page4.html
@@ -1,11 +1,11 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title> "I'm not Ronny" </title>
 </head>
 <body>
 
-p><img src="notoldman.png" alt="whoops!" width="500"></p>
+<p><img src="notoldman.png" alt="whoops!" width="500"></p>
 
 
 <h1>"come to my lair and you might find him"</h1> 
@@ -15,7 +15,7 @@ p><img src="notoldman.png" alt="whoops!" width="500"></p>
 </a>
 <p><a>click the image</a></p> 
 
-<body style="background-color:rgb(82, 52, 52);"></body>
+<body style="background-color:rgb(0, 0, 0);"></body>
 
 </body>
 </html>
