--- a/netart/page9.html
+++ b/netart/page9.html
@@ -11,7 +11,7 @@ p><img src="notoldman.png" alt="whoops!" width="1000"></p>
 
 <body style="background-color:rgb(150, 22, 91);"></body>
 
-<a href="page1.html">
+<a href="index.html">
 
 
 
