--- a/3d-print-art.html
+++ b/3d-print-art.html
@@ -133,7 +133,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 				</label>
 				<div id="logo"><span class="wsite-logo">
 
-	<a href="hp.html">
+	<a href="index.html">
 	
 	<span id="wsite-title">RAWLE WORKMAN</span>
 	
@@ -144,7 +144,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 					<div class="container"><ul class="wsite-menu-default">
 		<li id="pg118299299903079922" class="wsite-menu-item-wrap">
 			<a
-						href="hp.html"
+						href="index.html"
 				class="wsite-menu-item"
 				>
 				Home
