--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 				</label>
 				<div id="logo"><span class="wsite-logo">
 
-	<a href="hp.html">
+	<a href="index.html">
 	
 	<span id="wsite-title">RAWLE WORKMAN</span>
 	
@@ -261,7 +261,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <div class="paragraph">I'm mainly a photographer but these art pages are me dipping into interdisciplinary art&nbsp;</div>
 
 <div style="text-align:left;"><div style="height: 10px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-highlight" href="hp.html" >
+<a class="wsite-button wsite-button-small wsite-button-highlight" href="index.html" >
 <span class="wsite-button-inner">LEARN MORE</span>
 </a>
 <div style="height: 10px; overflow: hidden;"></div></div>
