--- a/net-art.html
+++ b/net-art.html
@@ -133,7 +133,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 				</label>
 				<div id="logo"><span class="wsite-logo">
 
-	<a href="hp.html">
+	<a href="index.html">
 	
 	<span id="wsite-title">RAWLE WORKMAN</span>
 	
