--- a/3d-print-art.html
+++ b/3d-print-art.html
@@ -185,7 +185,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			<div class="wsite-section-elements">
 				<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="20BA3099-D537-4A39-BDD5-33E04866FB84.JPG" alt="Picture" style="width:auto;max-width:100%" />
+<img src="pick.png" alt="Picture" style="width:auto;max-width:100%" />
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
