--- a/net-art.html
+++ b/net-art.html
@@ -143,7 +143,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </div></div>
 
 <div style="text-align:center;"><div style="height: 10px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-normal" href="https://workmayne.github.io/netart/net-art.html" target="_blank">
+<a class="wsite-button wsite-button-small wsite-button-normal" href="netart/index.html" target="_blank">
 <span class="wsite-button-inner">Click Here</span>
 </a>
 <div style="height: 10px; overflow: hidden;"></div></div>
