--- a/netart/page10.html
+++ b/netart/page10.html
@@ -22,7 +22,7 @@ p><img src="notoldman.png" alt="whoops!" width="1000"></p>
 <p><a> "something weird is going on"</a></p>  
 <p><a>end it all</a></p> 
 
-<a href="page1.html">
+<a href="index.html">
 
 
 
