--- a/index.html
+++ b/index.html
@@ -77,102 +77,57 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 </script>
 		
 		
-	</head>
-	<body class="header-page  wsite-page-index  full-width-on  wsite-theme-light"><div class="body-wrap">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WORKMAN</title>
+    <style>
+        /* Styles for the navigation bar */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
 
-		<div class="wrapper">
-			<div id="header-wrap">
-				<label for="nav-trigger" class="nav-trigger hamburger">
-					<span class="open-btn">
-						<span class="mobile"></span>
-						<span class="mobile"></span>
-						<span class="mobile"></span>
-					</span>
-				</label>
-				<div id="logo"><span class="wsite-logo">
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
 
-	<a href="index.html">
-	
-	<span id="wsite-title">RAWLE WORKMAN</span>
-	
-	</a>
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
 
-</span></div>
-				<div id="nav">
-					<div class="container"><ul class="wsite-menu-default">
-	
-		<li id="pg367864528877266312" class="wsite-menu-item-wrap">
-			<a
-						href="glitch-art.html"
-				class="wsite-menu-item"
-				>
-				Glitch Art
-			</a>
-			
-		</li>
-		<li id="pg223803296413359034" class="wsite-menu-item-wrap">
-			<a
-						href="meme-mashup.html"
-				class="wsite-menu-item"
-				>
-				Meme mashup
-			</a>
-			
-		</li>
-		<li id="pg498791305533633163" class="wsite-menu-item-wrap">
-			<a
-						href="minecraft.html"
-				class="wsite-menu-item"
-				>
-				Minecraft
-			</a>
-			
-		</li>
-		<li id="pg222333790853184261" class="wsite-menu-item-wrap">
-			<a
-						href="3d-print-art.html"
-				class="wsite-menu-item"
-				>
-				3d print art
-			</a>
-			
-		</li>
-		<li id="pg736740797886917881" class="wsite-menu-item-wrap">
-			<a
-						href="net-art.html"
-				class="wsite-menu-item"
-				>
-				Net Art
-			</a>
-			
-		</li>
-</ul>
-</div>
-				</div>
-		</div><!-- end header-wrap -->
+        /* Optional: Add a responsive design */
+        @media screen and (max-width: 600px) {
+            .navbar a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+        }
+    </style>
+</head>
+<body>
 
-		<div id="banner-wrap">
-			<div class="wsite-elements wsite-not-footer wsite-header-elements">
-	<div class="wsite-section-wrap">
-	<div  class="wsite-section wsite-header-section wsite-section-bg-image" style="height: 1224px;vertical-align: top;background-image: url(&quot;/uploads/1/4/9/1/149106927/background-images/306759223.jpeg&quot;) ;background-repeat: no-repeat ;background-position: NaN; NaN;background-size: 100% ;background-color: transparent ;background-size: cover;" >
-		<div class="wsite-section-content">
-			
-				<div class="banner">
-					<div class="container">
-				<div class="wsite-section-elements">
-					<div class="wsite-spacer" style="height:295px;"></div>
-
-<h2 class="wsite-content-title" style="text-align:left;"><font size="7" color="#d5d5d5">Rawle Workman<br />Creative director</font></h2>
-				</div>
-			</div>
-				</div>
-			
-		</div>
-		<div class=""></div>
-	</div>
+<div class="navbar">
+    <a href="index.html">Home</a>
+	<a href="glitch-art.html">Glitch</a>
+    <a href="meme-mashup.html">Meme</a>
+    <a href="minecraft.html">Minecraft</a>
+    <a href="net-art.html">Net Art</a>
+	<a href="3d-print-art.html">3d Art</a>
 </div>
 
-</div>
+</body>
+</html>
+
 
 		</div><!-- end banner-wrap -->
 
