--- a/net-art.html
+++ b/net-art.html
@@ -75,88 +75,57 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 		)
 	}
 //-->
-</script>
 		
-		
-	</head>
-	<body class="header-page  wsite-page-net-art  full-width-on  wsite-theme-light"><div class="body-wrap">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WORKMAN</title>
+    <style>
+        /* Styles for the navigation bar */
+        .navbar {
+            background-color: #333;
+            overflow: hidden;
+        }
 
-		<div class="wrapper">
-			<div id="header-wrap">
-				<label for="nav-trigger" class="nav-trigger hamburger">
-					<span class="open-btn">
-						<span class="mobile"></span>
-						<span class="mobile"></span>
-						<span class="mobile"></span>
-					</span>
-				</label>
-				<div id="logo"><span class="wsite-logo">
+        .navbar a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
 
-	<a href="index.html">
-	
-	<span id="wsite-title">RAWLE WORKMAN</span>
-	
-	</a>
+        .navbar a:hover {
+            background-color: #ddd;
+            color: black;
+        }
 
-</ul>
-</div>
-				</div>
-		</div><!-- end header-wrap -->
+        /* Optional: Add a responsive design */
+        @media screen and (max-width: 600px) {
+            .navbar a {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+        }
+    </style>
+</head>
+<body>
 
-		<div id="banner-wrap">
-			<div class="wsite-elements wsite-not-footer wsite-header-elements">
-	<div class="wsite-section-wrap">
-	<div  class="wsite-section wsite-header-section wsite-section-bg-image" style="background-image: url(&quot;/uploads/1/4/9/1/149106927/background-images/837819934.jpeg&quot;) ;background-repeat: no-repeat ;background-position: NaN% NaN% ;background-size: 100% ;background-color transparent ;background-size: cover;" >
-		<div class="wsite-section-content">
-			
-				<div class="banner">
-					<div class="container">
-				<div class="wsite-section-elements">
-					<h2 class="wsite-content-title"><font color="#d5d5d5">Net Art&nbsp;</font></h2>
-				</div>
-			</div>
-				</div>
-			
-		</div>
-		<div class=""></div>
-	</div>
-</div>
-
-</div>
-
-		</div><!-- end banner-wrap -->
-
-		<div id="main-wrap">
-			<div id="wsite-content" class="wsite-elements wsite-not-footer">
-	<div class="wsite-section-wrap">
-	<div class="wsite-section wsite-body-section wsite-background-12"  >
-		<div class="wsite-section-content">
-				<div class="container">
-			<div class="wsite-section-elements">
-				<h2 class="wsite-content-title" style="text-align:center;">Who burnt the steak?</h2>
-
-<div><div class="wsite-image wsite-image-border-none " style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
-<a>
-<img src="oldman.png" alt="Picture" style="width:auto;max-width:100%" />
-</a>
-<div style="display:block;font-size:90%"></div>
-</div></div>
-
-<div style="text-align:center;"><div style="height: 10px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-normal" href="netart/index.html" target="_blank">
-<span class="wsite-button-inner">Click Here</span>
-</a>
-<div style="height: 10px; overflow: hidden;"></div></div>
-
-<div class="paragraph" style="text-align:center;">&nbsp;Here's my Net art project. The case of the burnt steak</div>
-			</div>
-		</div>
-			</div>
-
-	</div>
+<div class="navbar">
+    <a href="index.html">Home</a>
+	<a href="glitch-art.html">Glitch</a>
+    <a href="meme-mashup.html">Meme</a>
+    <a href="minecraft.html">Minecraft</a>
+    <a href="net-art.html">Net Art</a>
+	<a href="3d-print-art.html">3d Art</a>
 </div>
 
-</div>
+</body>
+</html>
 
 		</div><!-- end main-wrap -->
 
