--- a/3d-print-art.html
+++ b/3d-print-art.html
@@ -73,6 +73,9 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			{}
 		)
 	}
+//-->
+</script>
+	
 		
 <!DOCTYPE html>
 <html lang="en">
