--- a/glitch-art.html
+++ b/glitch-art.html
@@ -74,8 +74,12 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			{}
 		)
 	}
+//-->
+</script>
 		
-	<!DOCTYPE html>
+		
+			
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -125,6 +129,29 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 
 </body>
 </html>
+
+				</div>
+		</div><!-- end header-wrap -->
+
+		<div id="banner-wrap">
+			<div class="wsite-elements wsite-not-footer wsite-header-elements">
+	<div class="wsite-section-wrap">
+	
+			
+				<div class="banner">
+					<div class="container">
+				<div class="wsite-section-elements">
+					<h2 class="wsite-content-title"><font size="7" color="#d5d5d5">Glitch art&nbsp;</font></h2>
+				</div>
+			</div>
+				</div>
+			
+		</div>
+		<div class=""></div>
+	</div>
+</div>
+
+</div>
 
 		</div><!-- end banner-wrap -->
 
